add version linking and unlinking endpoints
